k8s/apps/internal/external/gitlab-webui/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ingress
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://gitlab.opryga.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "GitLab WebUI"
    gethomepage.dev/description: "GitLab WebUI"
    gethomepage.dev/group: "DevOps Tools"
    gethomepage.dev/icon: "longhorn.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitlab.opryga.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: gitlab
          port: 80
  tls:
    secretName: opryga-com-tls
